# pythonDiplomnaya

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/: base.html
diary/templates/diary/: base.html  home.html  note_confirm_delete.html  note_detail.html  note_form.html  note_list.html
diary/templates/diary/includes/: inc_menu.html  note_card.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
